--- a/styles.css
+++ b/styles.css
@@ -209,3 +209,49 @@ button:hover {
     }
 }
 
+#options a {
+    text-decoration: none;
+    padding: 10px 20px;
+}
+
+#options .icon {
+    cursor: pointer;
+    display: none;
+}
+
+
+@media screen and (max-width: 767px) {
+
+    #options a {
+        display: none;
+    }
+    #main{
+        overflow-x: hidden;
+    }
+
+    #options .icon {
+        display: block;
+    }
+
+    #options.active {
+        position: fixed;
+        top: 10%;
+        right: 1vw;
+        width: 100px;
+        background-color: rgba(145, 205, 224, 0.786);
+        z-index: 9;
+        transition: right 0.3s;
+        display: block;
+    }
+
+    #options.active a {
+        display: block;
+        text-align: right;
+        color: #000;
+        padding: 10px;
+        font-weight: 100;
+    }
+}
+
+
+
